samples/_failures_safe/1761378646_daacc2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1b78724.c: In function ‘main’:
./samples/SAFE/__tmp_d1b78724.c:153:16: error: missing terminating " character
  153 |         printf("Failed to add nodes\n
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d1b78724.c:153:9: error: expected expression at end of input
  153 |         printf("Failed to add nodes\n
      |         ^~~~~~
./samples/SAFE/__tmp_d1b78724.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d1b78724.c:153:9: error: expected declaration or statement at end of input
